Change endpoint getByGenre,gender attribute for genre